# safety-critical-rust-consortium

./: 404.html  CNAME  CONTRIBUTING.md  PRIVACY.md  README.md  _typos.toml  index.html  sitemap.xml
subcommittee/coding-guidelines/initiatives/safety-critical-rust-coding-guidelines/: README.md  generate-guideline-templates.py  make.py  pyproject.toml
subcommittee/coding-guidelines/initiatives/safety-critical-rust-coding-guidelines/builder/: README.md  build_cli.py  pyproject.toml
subcommittee/coding-guidelines/initiatives/safety-critical-rust-coding-guidelines/exts/coding_guidelines/: README.rst  __init__.py  fls_checks.py  fls_linking.py  std_role.py  write_guidelines_ids.py
subcommittee/coding-guidelines/initiatives/safety-critical-rust-coding-guidelines/src/: README.rst  conf.py  fls_ignore_list.txt  index.rst
subcommittee/coding-guidelines/initiatives/safety-critical-rust-coding-guidelines/src/appendices/: index.rst  licenses.rst  standards-matrices.rst
subcommittee/coding-guidelines/initiatives/safety-critical-rust-coding-guidelines/src/coding-guidelines/: associated-items.rst  attributes.rst  concurrency.rst  entities-and-resolution.rst  exceptions-and-errors.rst  expressions.rst  ffi.rst  functions.rst  generics.rst  implementations.rst  index.rst  inline-assembly.rst  macros.rst  ownership-and-destruction.rst  patterns.rst  program-structure-and-compilation.rst  statements.rst  types-and-traits.rst  unsafety.rst  values.rst
subcommittee/coding-guidelines/initiatives/safety-critical-rust-coding-guidelines/src/overview/: how-to-read.rst  index.rst  (+2 more)
(+912 files in other folders)
